--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "author": "Vern Wolfley",
   "twitter": "@vernwolfley",
-  "url": "http://geo.azmag.gov/maps/..../",
+  "url": "http://vwolfley.github.io/find-extent/",
   "private": true,
 
   "devDependencies": {
