--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "ToolsFindExent",
-  "version": "1.1.0",
-  "author": "Vern Wolfley",
-  "twitter": "@vernwolfley",
-  "url": "http://vwolfley.github.io/find-extent/",
+  "name": "FindExentTool",
+  "version": "1.2.0",
+  "date": "04/26/2017",
+  "description": "Extent Finder Tool",
+  "keywords": ["Extent", "Helper", "Tools", "Maps", "ESRI", "JavaScript"],
+  "main": "index.js",
+  "homepage": "http://vwolfley.github.io/find-extent/",
+  "author": "Vern Wolfley <@vernwolfley>",
+  "contributors": [{
+    "name": "Vern Wolfley",
+    "email": "",
+    "twitter": "@vernwolfley"
+  }],
   "private": true,
+  "dependencies": {
 
+  },
   "devDependencies": {
-    "grunt":                "~0.4.4",
+    "grunt":                "0.4.5",
     "grunt-contrib-cssmin":     "*",
     "grunt-contrib-csslint":    "*",
-    "grunt-cssc":               "*",
     "grunt-contrib-jshint":     "*",
     "grunt-contrib-uglify":     "*",
     "grunt-contrib-watch":      "*",
     "grunt-htmlhint":           "*",
+    "grunt-contrib-concat":     "*",
+    "grunt-text-replace":       "*",
+    "grunt-version-check":      "*",
     "matchdep":                 "*",
     "jshint-stylish-ex":        "*",
-    "grunt-contrib-concat":     "*"
-  }
+    "lodash":                   "*",
+    "normalize.css":            "*"
+
+  },
+  "license": "MIT"
 }
