--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+# Useful .gitignore templates: https://github.com/github/gitignore
+#
 #################
 ## Eclipse
 #################
@@ -222,5 +226,8 @@ pip-log.txt
 node_modules
 bower_components
 
-# workspace files are user-specific don't track
-*.sublime-workspace
+ # workspace files are user-specific don't track
+ *.sublime-workspace
+
+# folder for editing and testing
+reports/
