--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "find-extent-tool",
   "version": "1.3.1",
-  "date": "10/07/2017",
+  "date": "2017-10-07",
   "copyright": "2017",
   "description": "Extent Finder Tool",
   "keywords": [
@@ -12,8 +12,6 @@
     "ESRI",
     "JavaScript"
   ],
-  "main": "index.js",
-  "homepage": "http://vwolfley.github.io/find-extent/",
   "author": "Vern Wolfley <@vernwolfley>",
   "contributors": [
     {
@@ -26,26 +24,57 @@
     "type": "git",
     "url": "https://github.com/vwolfley/find-extent"
   },
+  "type": "module",
+  "homepage": ".",
   "private": true,
-  "dependencies": {},
+  "scripts": {
+    "dev": "vite",
+    "build": "npm run replace && vite build",
+    "preview": "vite preview",
+    "replace": "node replaceScripts"
+  },
+  "dependencies": {
+    "@arcgis/core": "^4.28.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0"
+  },
   "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-contrib-cssmin": "2.2.1",
-    "grunt-contrib-csslint": "2.0.0",
-    "grunt-contrib-jshint": "1.1.0",
-    "grunt-contrib-uglify": "3.1.0",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-htmlhint": "0.9.13",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-text-replace": "0.4.0",
-    "grunt-version-check": "0.3.8",
-    "grunt-comment-toggler": "^0.2.2",
-    "grunt-contrib-clean": "1.1.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "matchdep": "2.0.0",
-    "jshint-stylish-ex": "0.2.0",
-    "lodash": "4.17.4",
-    "normalize.css": ">=7.0.0"
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "mag-prettier-config": "^1.1.1",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "replace-in-file": "^7.0.2",
+    "tailwindcss": "^3.3.5",
+    "vite": "^4.5.0"
+  },
+  "prettier": "mag-prettier-config",
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "prettier"
+    ],
+    "env": {
+      "browser": true,
+      "node": true,
+      "es6": true
+    }
+  },
+  "browserslist": {
+    "production": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "license": "MIT"
 }
