--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "find-extent-tool",
   "version": "1.3.1",
   "date": "2017-10-07",
+  "created": "2014-03-03",
   "copyright": "2017",
   "description": "Extent Finder Tool",
   "keywords": [
